fix: update background z-index

--- a/src/modal/_pera-wallet-modal.scss
+++ b/src/modal/_pera-wallet-modal.scss
@@ -95,6 +95,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: -1;
 
     content: "";
 
